fix(Dev branch): ensure that heading span elements all adhere consintent spacing
adjust the overall padding in 'h4' card__heading such that all span text looks nicely the same

--- a/css/styles.css
+++ b/css/styles.css
@@ -209,7 +209,9 @@ body {
     height: 23rem;
     background-blend-mode: screen;
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
-    clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%); }
+    clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px; }
     .card__picture--1 {
       background-image: linear-gradient(to right bottom, #ffb900, #ff7730), url(../img/nat-5.jpg); }
     .card__picture--2 {
@@ -226,7 +228,7 @@ body {
     top: 12rem;
     right: 2rem; }
   .card__heading-span {
-    padding: 1rem 1.5rem;
+    padding: 1rem 2.5rem;
     -webkit-box-decoration-break: clone;
     box-decoration-break: clone; }
     .card__heading-span--1 {
