--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -84,7 +84,7 @@
     }
 
     &__heading-span {
-        padding: 1rem 1.5rem;
+        padding: 1rem 2.5rem; 
         -webkit-box-decoration-break: clone;
         box-decoration-break: clone;
 
